--- a/deel-1-flexbox-positioneren/index.html
+++ b/deel-1-flexbox-positioneren/index.html
@@ -25,9 +25,9 @@
 <img src="assets/images/opdracht-2-eindresultaat.jpg" alt="opdracht-2 voorbeeld">
 <section class="opdracht-2">
     <ul>
-        <li>Ik heb niet zo veel tekst</li>
-        <li>Ik heb al wat meer text dan de vorige paragraaf</li>
-        <li>Ik heb heel veel content. Zo veel content dat deze paragraaf aanzienlijk langer is dan de twee vorige. </li>
+        <li> heb niet zo veel tekst</li>
+        <li> heb al wat meer text dan de vorige paragraaf</li>
+        <li> heb heel veel content. Zo veel content dat deze paragraaf aanzienlijk langer is dan de twee vorige. </li>
     </ul>
 </section>
 <!-- E I N D E  O P D R A C H T  2 -->
@@ -37,9 +37,9 @@
 <img src="assets/images/opdracht-3-eindresultaat.jpg" alt="opdracht-3 voorbeeld">
 <section class="opdracht-3">
     <ul>
-        <li>Top left</li>
-        <li>Centered</li>
-        <li>Bottom right</li>
+        <li class="item1">Top left</li>
+        <li class="item2">Centered</li>
+        <li class="item3">Bottom right</li>
     </ul>
 </section>
 <!-- E I N D E  O P D R A C H T  3 -->
@@ -77,20 +77,23 @@
 <img src="assets/images/opdracht-5-eindresultaat.jpg" alt="opdracht-5 voorbeeld">
 <section class="opdracht-5">
     <div>
-        <ul>
-            <li>Column 1 top</li>
+        <ul class="column1">
+            <li class="column1">Column 1 top</li>
             <li>Column 1 bottom</li>
         </ul>
-        <ul>
-            <li>Column 2 top</li>
+        <ul class="column2">
+            <li class="column2">Column 2 top</li>
             <li>Column 2 bottom</li>
         </ul>
-        <ul>
-            <li>Column 3 top</li>
+        <ul class="column3">
+            <li class="column3">Column 3 top</li>
             <li>Column 3 bottom</li>
         </ul>
     </div>
 </section>
+
+
+
 <!-- E I N D E  O P D R A C H T  5 -->
 
 </body>
