--- a/deel-3-webpagina/index.html
+++ b/deel-3-webpagina/index.html
@@ -5,12 +5,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"/>
     <link rel="stylesheet" href="styles/styles.css">
     <title>Flexbox opdracht 3</title>
+
 </head>
 <body>
-    <div>
-        <h1>All Your Business Data in One Place</h1>
-        <h3>Sync and store all your business data. Explore your data with SQL or visualize it with your favorite BI or
-            analytics tools.</h3>
+
+<div class="top-text">
+    <header>
+
+
+            <h3>Analytica</h3>
+
+
+        <p>About us</p>
+        <p>Strategy</p>
+        <p>Prices</p>
+        <p>Contact</p>
+
+    </header>
+</div>
+
+<div class="kop-titel">
+    <br>
+    <h1>All Your Business Data in One Place</h1>
+    <h3>Sync and store all your business data. Explore your data with SQL or visualize it with your favorite BI or
+        analytics tools.</h3>
+    <br>
+</div>
+
+<section>
+    <div class="block">
+        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur corporis esse eum expedita, illum
+            ipsum
+            laboriosam neque nisi pariatur quam quas quod sed veritatis, vero voluptatibus. Distinctio illum maiores
+            vitae.
+        </p>
     </div>
+
+    <div class="block">
+        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur corporis esse eum expedita, illum
+            ipsum
+            laboriosam neque nisi pariatur quam quas quod sed veritatis, vero voluptatibus. Distinctio illum maiores
+            vitae.
+        </p>
+    </div>
+
+
+    <div class="block">
+        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur corporis esse eum expedita, illum
+            ipsum
+            laboriosam neque nisi pariatur quam quas quod sed veritatis, vero voluptatibus. Distinctio illum maiores
+            vitae.
+        </p>
+    </div>
+
+</section>
+
 </body>
 </html>
